Add Gemini reporting option

--- a/reconftw.cfg
+++ b/reconftw.cfg
@@ -229,6 +229,8 @@ FARADAY_WORKSPACE="reconftw" # Faraday workspace
 AI_MODEL="llama3:8b" # Model to use
 AI_REPORT_TYPE="md" # Report type to use (md, txt)
 AI_REPORT_PROFILE="bughunter" # Report profile to use (executive, brief, or bughunter)
+AI_PROVIDER="local" # "local" for reconftw_ai or "gemini" for Google Gemini API
+GEMINI_API_KEY="" # Gemini API key if AI_PROVIDER=gemini
 
 # TERM COLORS
 bred='\033[1;31m'
